# stm32_demo

./: .gitignore  CMakeLists.txt  README.md  demo_build.sh  makefile  stm32.ld
compiler/: compiler.cmake
compiler/gnu/: gnu.cmake
lib/inc/: stm32f4xx.h
lib/stm32/: CMakeLists.txt
misc/: stm32.ld
misc/startup/: CMakeLists.txt  startup.c
mod/delay/: CMakeLists.txt  main.c
mod/dumb/: CMakeLists.txt  main.c
mod/simple_led/: CMakeLists.txt  main.c
mod/uart_echo/: CMakeLists.txt  main.c
toolchains/: gnu-arm-none-eabi.cmake
