include_directories(inc)

# export includes to other modules
set(STM32_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/inc/" PARENT_SCOPE)

add_library(stm32 STATIC
inc/stm32f4xx_wwdg.h
inc/stm32f4xx_rtc.h
inc/misc.h
inc/stm32f4xx_dac.h
inc/core_cm4_simd.h
inc/stm32f4xx_sdio.h
inc/stm32f4xx_flash.h
inc/core_cmFunc.h
inc/stm32f4xx_syscfg.h
inc/arm_const_structs.h
inc/stm32f4xx_rng.h
inc/stm32f4xx_dcmi.h
inc/stm32f4xx_dma2d.h
inc/stm32f4xx_tim.h
inc/stm32f4xx_gpio.h
inc/core_cm4.h
inc/stm32f4xx_adc.h
inc/stm32f4xx.h
inc/core_sc000.h
inc/core_cm0plus.h
inc/core_cm3.h
inc/stm32f4xx_can.h
inc/core_sc300.h
inc/stm32f4xx_pwr.h
inc/core_cm0.h
inc/stm32f4xx_dma.h
inc/stm32f4xx_usart.h
inc/arm_math.h
inc/stm32f4xx_exti.h
inc/stm32f4xx_sai.h
inc/system_stm32f4xx.h
inc/stm32f4xx_cryp.h
inc/stm32f4xx_fmc.h
inc/stm32f4xx_hash.h
inc/stm32f4xx_rcc.h
inc/stm32f4xx_crc.h
inc/stm32f4xx_iwdg.h
inc/stm32f4xx_dbgmcu.h
inc/stm32f4xx_i2c.h
inc/arm_common_tables.h
inc/core_cmInstr.h
inc/stm32f4xx_ltdc.h
inc/stm32f4xx_spi.h
inc/stm32f4xx_fsmc.h
src/stm32f4xx_rtc.c
src/stm32f4xx_exti.c
src/stm32f4xx_hash_sha1.c
src/misc.c
src/stm32f4xx_cryp.c
src/stm32f4xx_i2c.c
src/stm32f4xx_flash.c
src/stm32f4xx_iwdg.c
src/stm32f4xx_hash.c
src/stm32f4xx_gpio.c
src/stm32f4xx_cryp_tdes.c
src/stm32f4xx_wwdg.c
src/stm32f4xx_rng.c
src/stm32f4xx_dma.c
src/stm32f4xx_hash_md5.c
src/stm32f4xx_dac.c
src/stm32f4xx_pwr.c
src/stm32f4xx_sdio.c
src/stm32f4xx_dma2d.c
src/stm32f4xx_dcmi.c
src/stm32f4xx_usart.c
src/stm32f4xx_dbgmcu.c
src/stm32f4xx_cryp_des.c
src/stm32f4xx_sai.c
src/stm32f4xx_spi.c
src/stm32f4xx_crc.c
src/stm32f4xx_ltdc.c
src/stm32f4xx_cryp_aes.c
src/stm32f4xx_adc.c
src/stm32f4xx_rcc.c
src/stm32f4xx_tim.c
src/stm32f4xx_can.c
src/stm32f4xx_fsmc.c
src/stm32f4xx_syscfg.c
)
